# kospex

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  FASTAPI_MIGRATION.md  LICENSE  MANIFEST.in  README.md  README.short.md  SECURITY.md  build-image.sh  build-static.js  kgit  kospex  kospex_core.py  kospex_dependencies.py  kospex_git.py  kospex_mergestat.py  kospex_query.py  kospex_schema.py  kospex_utils.py  kospex_web.py  kreaper  krunner  krunner_utils.py  kweb  package-lock.json  package.json  parse_krunner_osi.py  precommit.sh  pyproject.toml  pytest.ini  requirements.txt  run_fastapi.py  shell-kospex.sh  tailwind.config.js  test-cli.sh  test_agent.sh  test_kospex.py  (+2 more)
.github/workflows/: python-app.yml
changes/: 202507-key-person-risk.md  202507-template-header-updates.md  20250802-debug-timer.md  20250816-email_type.md  20251024-kospex-connectivity.md  2026-07-17-extractor-registry-classifier-design.md  2026-07-17-extractor-registry-classifier-plan.md  2026-07-20-osi-extraction-status-design.md  2026-07-20-osi-extraction-status-plan.md  2026-07-21-commit-files-double-slash-remediation.md  2026-07-21-rename-arrow-braceless-remediation.md  202601-MVP-duckdb-git-sync.md  202601-assessment-types-and-krunner.md  202601-assessments.md  202601-cycle-time-git-ingest.md  202601-git-ingest-encoding-fix.md  202601-habitat-config.md  202601-kospex-cli-rename.md  202601-sync-progress-tracking.md  20260112-pygithub-rest-api-refactor.md  202602-remove-flask-dependencies.md  202602-tech-landscape-assessment-types.md  202603-developer-stats-table.md  202604-release-0.0.36-plan.md  20260420-krunner-osi-all-fix.md  202605-db-migration-system-plan.md  202605-db-migration-system.md  202605-introspect-circular-import-fix.md  202605-orgs-rich-table.md  202605-osi-dependencies-pipeline.md  202605-pnpm-assess-package-use-plan.md  202605-pnpm-assess-package-use.md  202605-prettytable-to-rich-migration.md  202605-repo-org-header-redesign-plan.md  202605-repo-org-header-redesign.md  202605-summary-rich-status-legend-plan.md  202605-summary-rich-status-legend.md  20260505-pyproject-parser-error-handling.md  20260507-bitbucket-api-token-support.md  202606-file-metadata-single-row.md  (+16 more)
docs/: CNAME  CODA.md  _config.yml  branch-aware-sync.md  commands.md  data-schemas.md  getting-started.md  git-twin.md  github-rate-limits.md  index.md  kgit.md  kospex-agent.md  kospex.md  krunner.md  metrics.md  repo-id.md  sitemap.xml  testing-github-actions.md  troubleshooting.md  use-cases.md  useful-git-commands.md  web-endpoint-testing.md
docs/_layouts/: default.html
docs/adr/: claude-adr-template.md  email_mapping_adr.md  index.md  schema-updates.md
docs/articles/: orphaned-repos.md  vulnerabilities-testing-indicator.md
docs/kweb/: index.md
ideas/: 202507-repo-sync-refactor.md  202509-krunner-repo-assessments.md  bitbucket_checker.py  github-library-options.md  mcp-options.md  package-migration-approach.md  repo_access_check.py  repo_disk_size.md  sqlmodel-migration.md
src/: api_routes.py  devs-per-tech.py  kgit.py  kospex.py  kospex_agent.py  kospex_bitbucket.py  kospex_cli.py  kospex_core.py  kospex_dependencies.py  kospex_email.py  kospex_git.py  kospex_github.py  kospex_logging.py  kospex_observation.py  kospex_query.py  kospex_request_cache.py  kospex_schema.py  kospex_stats.py  kospex_utils.py  kospex_web.py  kreaper.py  krunner.py  krunner_utils.py  kwatch.py  kweb.py  kweb2.py  kweb_graph_service.py  kweb_help_service.py  kweb_security.py
src/kospex/: README.md  __init__.py  assessment_types.py  git_duckdb.py  git_ingest.py  habitat_config.py
templates/: 404.html  _datatable_scripts.html  developer_view.html  developers.html  header.html  home.html  hotspots.html  index.html  landscape.html  observations.html  observations_repo.html  observations_repo_key.html  orgs.html  repo_view.html  repos.html  servers.html
tests/: Dockerfile  Dockerfile.alpine  build-alpine.sh  build-image.sh  clone-install.sh  conftest.py  kweb_tester.py  run-kdocker.sh  test_assessment_types.py  test_build_file_metadata_rows.py  test_capitalise.py  test_clone_repo.py  test_clone_repo_integration.py  test_db_introspect.py  test_db_migrator.py  test_dependencies_save.py  test_dependencies_template.py  test_email_type.py  test_extracted_file_keys.py  test_extractor_registry.py  test_extractors_pnpm.py  test_extractors_workflows.py  test_file_metadata_sync.py  test_get_dependencies_latest.py  test_habitat_config.py  test_kgit.py  test_kgit_clone_cli.py  test_kgit_pull.py  test_kgit_pull_sync.py  test_kospex.py  test_kospex_bitbucket.py  test_kospex_cli_upgrade_db.py  test_kospex_schema.py  test_kospex_utils.py  test_kweb_help.py  test_latest_commit_file_map.py  test_metadata_rebuild_guard.py  test_osi_extraction_view.py  test_osi_template.py  test_package_check_upload.py  (+4 more)
(+74 files in other folders)
