[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kospex"
version = "0.0.18"
description = "The kospex CLI tool."
authors = [{ name = "Peter Freiberg", email = "peter.freiberg@gmail.com" }]
license = { file = "LICENSE" }

dependencies = [
    "Click",
    "flask",
    "prettytable",
    "dateutils",
    "panopticas",
    "python-dotenv",
    "sqlite_utils",
    "requests",
    "PyGithub==2.6.1",
    "python-multipart>=0.0.20",
    "PyYAML",
    "mkdocs",
    "fastapi",
    "uvicorn",
]

requires-python = ">=3.11"
readme = "README.short.md"
keywords = ["analytics", "git", "code analytics", "developer analytics", "open source inventory", "predictive maintenance"]
classifiers = ["Programming Language :: Python :: 3"]


[tool.setuptools.package-data]
"*" = [
    "templates/*.html",
    "templates/**/*.html",
    "static/css/*.css",
    "static/js/*.js"
]

[project.scripts]
kgit = "kgit:cli"
kospex = "kospex:cli"
kospex-agent = "kospex_agent:cli"
krunner = "krunner:cli"
kreaper = "kreaper:cli"
#kweb = "kweb:kweb"
kweb = "kweb2:main"
kwatch = "kwatch:cli"

[project.urls]
Homepage = "https://kospex.io"
Issues = "https://github.com/kospex/kospex/issues"
Repository = "https://github.com/kospex/kospex"
