[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kospex"
version = "0.0.29"
description = "kospex - Code and Developer Analytics."
authors = [{ name = "Peter Freiberg", email = "peter.freiberg@gmail.com" }]
license = { file = "LICENSE" }

dependencies = [
    "Click",
    "flask",
    "prettytable",
    "dateutils",
    "panopticas>=0.0.13",
    "python-dotenv",
    "sqlite_utils",
    "requests",
    "rich>=14.0.0",
    "PyGithub==2.6.1",
    "python-multipart>=0.0.20",
    "PyYAML",
    "mkdocs",
    "jinja2>=3.1.6",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]

requires-python = ">=3.11"
readme = "README.short.md"
keywords = ["analytics", "git", "code analytics", "developer analytics", "open source inventory", "predictive maintenance"]
classifiers = ["Programming Language :: Python :: 3"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "templates/*.html",
    "templates/**/*.html",
    "static/**/*"
]

[project.scripts]
kgit = "kgit:cli"
kospex = "kospex:cli"
kospex-agent = "kospex_agent:cli"
krunner = "krunner:cli"
kreaper = "kreaper:cli"
kweb = "kweb2:main"


[project.urls]
Homepage = "https://kospex.io"
Issues = "https://github.com/kospex/kospex/issues"
Repository = "https://github.com/kospex/kospex"
