[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kospex"
version = "0.0.35"
description = "kospex - Code and Developer Analytics."
authors = [{ name = "Peter Freiberg", email = "peter.freiberg@gmail.com" }]
license = { file = "LICENSE" }

dependencies = [
    "Click",
    "flask",
    "prettytable",
    "dateutils",
    "panopticas>=0.0.14",
    "python-dotenv",
    "sqlite-utils",
    "requests",
    "rich>=14.0.0",
    "PyGithub==2.6.1",
    "python-multipart>=0.0.20",
    "PyYAML",
    "mkdocs",
    "jinja2>=3.1.6",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]

requires-python = ">=3.12"
readme = "README.short.md"
keywords = ["analytics", "git", "code analytics", "developer analytics", "open source inventory", "predictive maintenance"]
classifiers = ["Programming Language :: Python :: 3"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "templates/*.html",
    "templates/**/*.html",
    "static/**/*"
]

[project.scripts]
kgit = "kgit:cli"
kospex = "kospex:cli"
kospex-agent = "kospex_agent:cli"
krunner = "krunner:cli"
kreaper = "kreaper:cli"
kweb = "kweb2:main"


[project.urls]
Homepage = "https://kospex.io"
Issues = "https://github.com/kospex/kospex/issues"
Repository = "https://github.com/kospex/kospex"

[tool.ruff]
# Enable these rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore F401 (unused imports), F541 (f-string without placeholders), E501 (Line too long)
# Ignore I001 (Import block is un-sorted or unformatted), N812  (Lowercase `x_y` imported as non-lowercase `X_Y`
# These will only show as warnings, not fail the build
ignore = ["F401", "F541", "E501", "I001" ,"N812"]

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

line-length = 100
